2010-01-11  Darin Adler  <darin@apple.com>

        Try to get find-kana test passing on Tiger and Leopard.

        * platform/mac-leopard/fast/text/find-kana-expected.txt: Copied from fast/text/find-kana-expected.txt.
        Changed to expect failures due to an older version of ICU on those platforms.

2010-01-11  Brian Weinstein  <bweinstein@apple.com>

        Updated Windows expected results after r53085.

        * platform/win/editing/selection/mixed-editability-10-expected.txt:

2010-01-11  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Adam Roben & Dirk Schulze.

        svg <text> fails to update when setting x/y
        https://bugs.webkit.org/show_bug.cgi?id=22384

        Add simple tests covering SVGLengthList & SVGNumberList updates.

        * platform/mac/svg/custom/text-xy-updates-SVGList-expected.checksum: Added.
        * platform/mac/svg/custom/text-xy-updates-SVGList-expected.png: Added.
        * platform/mac/svg/custom/text-xy-updates-SVGList-expected.txt: Added.
        * svg/custom/text-xy-updates-SVGList.xhtml: Added.
        * svg/dynamic-updates/SVGTextElement-svgdom-rotate-prop-expected.txt: Added.
        * svg/dynamic-updates/SVGTextElement-svgdom-rotate-prop.html: Added.
        * svg/dynamic-updates/script-tests/SVGTextElement-svgdom-rotate-prop.js: Added.
        (executeTest):

2010-01-08  Enrica Casucci  <enrica@apple.com>

        Reviewed by Darin Adler.

        Cannot focus on an empty editable span in a non editable div.
        https://bugs.webkit.org/show_bug.cgi?id=33411
        <rdar://problem/5982901>

        * editing/deleting/6026335-expected.txt: Updated to reflect the lack of extra break element.
        * editing/selection/mixed-editability-10-expected.txt: Updated to cover the new case.
        * editing/selection/mixed-editability-10.html: Updated to cover the new case.
        * platform/mac/editing/deleting/5115601-expected.txt: Updated to reflect the lack of extra break element.
