@@ -1,3 +1,14 @@
+2010-01-11  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        https://bugs.webkit.org/show_bug.cgi?id=33482
+        Add a test for Russian text search
+
+        * fast/text/find-russian-expected.txt: Added.
+        * fast/text/find-russian.html: Added.
+        * fast/text/script-tests/find-russian.js: Added.
+
 2010-01-11  Darin Adler  <darin@apple.com>
 
         Try to get find-kana test passing on Tiger and Leopard.
